css/app.css
/* misc */
.narrow-width {
	max-width: 700px;
}
a.gray-eeeeee {
	color: #eeeeee;
}
hr {
	border: 3px solid rgba(100, 100, 100, 0.1);
	margin-top: 19px;
	margin-bottom: 20px;
}
body {
	background-color: #f7f7f9;
}
body.has-header-fixed .overlay {
	padding-top: 45px;
}
/* header */
#main_header {
	border-bottom: 5px solid #333;
}
	#main_header .dot-container {
		position: absolute;
		left: 50%;
		margin-left: 40px;
		font-size: 10px;
	}
	.hamburger form {
		display: none;
	}
	#main_header .welcome {
		font-size: .8rem;
		margin-right: 1.5rem;
	}
	#main_header .profile-thumbnail {
		position: relative;
		top: .25rem;
		right: 1rem;
	}
label[for="language_selector_select"] {
	position: absolute;
	top: 12px;
	right: 8px;
	background-color: #333;
	width: 32px;
	height: 19px;
	background-image: url('../img/sprite_flags.png');
	background-repeat: no-repeat;
	background-size: 100%;
}
#language_selector_select {
	position: absolute;
	top: 10px;
	right: 0;
	width: 44px;
	height: 44px;
}
#logo {
	color: white;
	text-transform: uppercase;
	letter-spacing: 4;
	font-size: 12px;
}
.circle {
    border-radius: 50%;
    width: 16px;
    height: 16px;
    display: inline-block!important;
    line-height: 16px;
    text-align: center;
}
	.circle.notification {
	    position: absolute;
	    top: 4px;
	    left: 22px;
	    background-color: red;
	    font-size: 10px;
	    color: white;
	}

/* content */
#main {
	margin: 0 auto;
	max-width: 1200px;
}
.content {
	float: right;
	width: 70%;
	padding: 2rem;
}
	.overlay .content {
		float: none;
		width: 100%;
		background-color: white;
	}
	.page-heading {
		font-size: 2rem;
	}
		.page-heading.with-underline {
			margin-bottom: 1.5rem;
    		padding-bottom: 1rem;
		}

.sidebar {
	float: left;
    width: 30%;
    padding: 2rem;
    line-height: 1.5rem;
}
	.sidebar nav {
		margin-top: 1rem;
	}
	.sidebar .card {
		margin-right: 0;
    	width: 100%;
	}
	.sidebar .card .card-children ul li:first-child {
		margin-right: 0;
	}
	.sidebar .card-children .child {
		margin-bottom: .5rem;
	}
		.sidebar .card-children .child:last-child {
			margin-bottom: 0;
		}
	.sidebar .card-children .child-meta {
		position: relative;
    	top: -.5rem;
    	margin-left: 1rem;
	}
	.sidebar .card-children .child-meta ul {
		text-align: left;
	}
		.sidebar .card-children .child-meta ul li {
			display: block;
		}


.with-underline {
    border-bottom: 1px solid rgba(100,100,100,.1);
    padding-bottom: .5rem;
	margin-bottom: 1.5rem;
}

.content.cards {
	padding-top: 0;
}

.card {
	width: 47.5%;
    padding: 1rem;
    text-align: center;
    margin-bottom: 1rem;
    background-color: white;
    display: inline-block;
}
	.card-title {
		font-size: 1.3rem;
	}
	.card:nth-child(odd) {
		margin-right: 2.5%;
	}
	.card .card-children {
		margin-top: 1rem;
		margin-bottom: 1rem;
	}
	.card .card-children ul,
	.card .card-children ul li {
		display: inline-block;
	}
	.card .card-children ul li:first-child {
		margin-right: 1rem;
	}
	.profile-thumbnail {
		border-radius: 50%;
	}

.horizontal-scroll-outer {
	overflow: scroll;
	width: 500px;
}
	.horizontal-scroll-inner {
		width: 1600px;
	}
		.card.calendar {
			width: 150px;
		}
			.card.calendar:first-child {
				margin-left: 1rem;
			}
		.card.calendar .calendar-image {
			margin: .5rem 0;
		}
/* video */
#video {
	width: 100%;
	/* display: none; */
	height: 30px;
}

/* language-scene */

.language-scene {
	text-align: center;
	padding: 1em;
}
	.language-scene .btn {
		border-bottom: 5px solid #166502;
	}
	.language-scene .btn:hover {
		border-bottom: 5px solid #2ab107;
		background-color: #51fe24;
	}

/* playlist */
.playlist {

}
	.playlist .playlist-item {
		position: relative;
		line-height: 20px;
	}
		.playlist .playlist-item:first-child {
			border-top: 1px solid #eeeeee;
		}
		.playlist .playlist-item .playlist-item-anchor {
			padding: 16px 16px 36px 16px;
			display: block;
			text-decoration: none;
			border: 1px solid #eeeeee;
			border-top: none;
			color: #333333;
		}
			.playlist .playlist-item .playlist-item-anchor.is-playing {
				border: 1px solid #b1078e;
				padding: 15px 16px 36px 16px;
			}
			.playlist .playlist-item .playlist-item-anchor.has-played {
				background-color: #faf5f9;
			}
			.playlist .playlist-item .playlist-item-anchor:visited {
				background-color: #eeeeee;
			}
			.playlist .playlist-item .playlist-item-anchor:hover {
				background-color: #eeeeee;
				border: none;
				padding: 16px 17px 37px 17px;
			}			
			.playlist .playlist-item-anchor:first-of-type {
			}
			.playlist .playlist-item .item-title {
			}
			.playlist .playlist-item .item-thumbnail {
				display: inline-block;
				float: left;
				margin-right: 10px;
			}
				.playlist .playlist-item .item-thumbnail img {
					width: 40px;
					height: 40px;
					background-color: #e1e1e8;
				}
			.playlist .playlist-item .item-language {

			}
			.playlist .playlist-item .item-duration {
				position: absolute;
				bottom: 12px; /* this is 12px to make up for the 4px given text under the baseline */
				left: 16px;
				font-size: 12px;
			
				font-family: 'Lucida Grande';
}
			.playlist .playlist-item .item-url {
				font-size: 12px;
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
			}
			.playlist .playlist-item .item-meta {
				position: absolute;
				bottom: 12px; /* this is 12px to make up for the 4px given text under the baseline */
				right: 16px;
				font-family: 'Lucida Grande';
			}
				.playlist .playlist-item .item-meta li {
					background-color: #e1e1e8;
					font-size: 12px;
				}
					.playlist .playlist-item .item-meta li:first-child {
						margin-right: 3px;
					}

/* flags */
#language_selector_select_label {

}
.flag-united-states {
	background-position: 0 0;
}
.flag-spain {
	background-position: 0 -37px;
}
.flag-france {
	background-position: 0 -74px;
}
.flag-portugal {
	background-position: 0 -110px;
}

